# slot_car_grand_prix_server

./: Cargo.toml  README.md
migrations/: 20240601143411_initial_db.sql  20240613124221_results_store.sql  20240614072824_add_datetime_to_score.sql
src/: api.rs  app.rs  gamedata.rs  legacy_login.rs  login.rs  main.rs  request_structs.rs  response_structs.rs  server_verification.rs
